	- [roms]  $1254: splitted I/O ports on HW3
	- [roms]  $1255: finished to use new memory layout; the memory window shows 
					 the exact memory mapping
	- [roms]  $1263: hw_get_real_address is a function pointer which depends on the 
					 calculator type for now (part of memory management rewrite attempt)
	- [roms]  $1278: completely removed old memory banking system (mem_tab & mem_msk)

- 27/04/2005, version 1.80u:
	- [roms]  $1191: popup menu can be raised by clicking on the LCD (iPAQ)
	- [roms]  $1192: fixed logging domain support (printl)
	- [roms]  $1195: some bug fixes by Christian Walther.
	- [roms]  $1213: fixed contrast on Titanium
	- [roms]  $1214: fixed range breakpoints (completely broken) and code bkpt
	- [roms]  $1229: can exit emulator from cross (WM decorations)
	- [jb]	  $1230: fixed va_list in printl
	- [kevin] $1231: allow setting a range breakpoint on a single byte
	- [kevin] $1232: fixed range breakpoint (overlap)
	- [roms]  $1233: fixed SSP/USP registers in registers.c
	- [roms]  $1234: 'exit & save state' moved in popup menu
	- [roms]  $1235: added accelator key to select & set PC on next line
	- [kevin] $1237/1238: don't clobber bkpts.id if we are already breaking
	- [kevin] $1239/1240: no FlashROM ghost space at 0x400000 on the TI-89
	- [kevin] $1239/1240: fixed hardwareRevision in the HW parameter block
	- [kevin] $1241/1242: fixed reads from wrong offsets in the stack window

- 20/04/2005, version 1.80t:
	- [roms]  $1152: fixed RAM space on Titanium
	- [kevin] $1156: added detection for WinXP with classic theme.
	- [roms]  $1161: fixed window position again (better fix-up)
	- [roms]  $1162: save main window position
	- [roms]  $1163: implementing receive file feature
	- [roms]  $1166: merged Christian Walther's patch for Mac OS-X port.
	- [kevin] $1167: increased link timeout from 10 to 60s.
	- [roms]  $1172: added receive of file
	- [roms]  $1173: improved to support group files